# git-provider-migrator

./: .coverage  .gitignore  NOTES.md  README.md  example_usage.py  migrate.py  migration_errors_20260308_145859.csv  migration_errors_20260308_155236.csv  pyproject.toml  repositories.json.example
git_provider_migrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
migrator/: cli.py
migrator/clients/: github.py  gitlab.py
migrator/formatting/: colors.py  repo_logger.py
migrator/utils/: lfs.py  tokens.py  urls.py
tests/: conftest.py  test_cli.py  test_clients_github.py  test_clients_gitlab.py  test_formatting.py  test_reporting_errors.py  test_utils_lfs.py  test_utils_tokens.py  test_utils_urls.py
