[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-provider-migrator"
version = "1.1.0"
description = "Migrate Git repositories between providers (GitLab → GitHub)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["gitlab", "github", "migration", "git", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "requests>=2.32.5",
    "python-gitlab>=8.1.0",
    "PyGithub>=2.0.0",
]

[project.scripts]
git-provider-migrator = "migrator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["migrator*"]

[tool.setuptools.package-data]
migrator = ["py.typed"]
